# Gemini_OpenSource

./: README.md  gcli  install.py  install_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
gemini_cli/: __init__.py  __main__.py  main.py  model_interface.py
gemini_cli/core/: __init__.py  checkpointing.py  cli.py  config.py  display.py  exceptions.py  extensions.py  file_discovery.py  memory.py  sandbox.py  session.py  telemetry.py  tools.py
gemini_cli/utils/: __init__.py  colors.py  file_utils.py  formatting.py  history.py  sandbox.py  shell.py  stats.py  theme.py  version.py
gemini_torch/: autoregressive_wrapper.py  model.py  tokenizer.py  transformer.py
