[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gemini-torch"
version = "0.2.3"
description = "Gemini - Pytorch"
license = "MIT"
authors = ["Kye Gomez <kye@apac.ai>"]
homepage = "https://github.com/kyegomez/Gemini"
documentation = "https://github.com/kyegomez/Gemini"  # Add this if you have documentation.
readme = "README.md"  # Assuming you have a README.md
repository = "https://github.com/kyegomez/Gemini"
keywords = ["artificial intelligence", "deep learning", "optimizers", "Prompt Engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.9"
zetascale = "*"
torch = "*"
einops = "*"
torchvision = "*"
sentencepiece = "*"
pytest = "*"
ring-attention-pytorch = "*"
aiohttp = ">=3.9.0"
async-timeout = { version = ">=4.0.0", markers = "python_version < '3.11'" }
aiofiles = ">=23.0.0"
rich = ">=13.0.0"
click = ">=8.0.0"
pydantic = ">=2.0.0"
pyyaml = ">=6.0"
chardet = ">=5.0.0"
psutil = ">=5.9.0"
pillow = ">=9.0.0"
requests = ">=2.28.0"
packaging = ">=21.0"
numpy = ">=1.21.0"
scipy = ">=1.9.0"
regex = ">=2023.6.3"
orjson = ">=3.9.0"
tqdm = ">=4.65.0"
python-dateutil = ">=2.8.0"
urllib3 = ">=2.0.0"
certifi = ">=2023.0.0"

[tool.poetry.group.lint.dependencies]
ruff = ">=0.1.6,<0.5.0"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
types-pytz = ">=2023.3,<2025.0"
black = ">=23.1,<25.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"

[tool.poetry.scripts]
gemini-cli = "gemini_cli.main:main"
gcli = "gemini_cli.main:main"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3